Added Ratchet as a dependency and made a first pass at stubbing out components.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "lodash": "^2.4.1",
+    "ratchet": "git://github.com/twbs/ratchet",
     "react": "^0.12.2"
   }
 }
