--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A cross-platform ReactJS UI framework for Cordova.",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "scriptPreprocessor": "./__tests__/preprocessor.js",
+    "unmockedModulePathPatterns": ["node_modules/react"],
+    "testPathIgnorePatterns": ["/node_modules/", "__tests__/preprocessor.js"]
   },
   "repository": {
     "type": "git",
@@ -26,11 +31,14 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "browserify": "^8.1.1",
-    "cordova": "^4.2.0"
+    "cordova": "^4.2.0",
+    "jest-cli": "^0.2.1",
+    "sinon": "^1.12.2"
   },
   "dependencies": {
     "lodash": "^2.4.1",
     "ratchet": "git://github.com/twbs/ratchet",
-    "react": "^0.12.2"
+    "react": "^0.12.2",
+    "react-tools": "^0.12.2"
   }
 }
