Added a more interesting test checking properties and talked to Sam about state vs. properties.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   },
   "jest": {
     "scriptPreprocessor": "./__tests__/preprocessor.js",
-    "unmockedModulePathPatterns": ["node_modules/react"],
-    "testPathIgnorePatterns": ["/node_modules/", "__tests__/preprocessor.js"]
+    "unmockedModulePathPatterns": [
+      "node_modules/react",
+      "node_modules/react/addons"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/", "__tests__/preprocessor.js"
+    ]
   },
   "repository": {
     "type": "git",
