--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "node_modules/react/addons"
     ],
     "testPathIgnorePatterns": [
-      "/node_modules/", "__tests__/preprocessor.js"
+      "/node_modules/",
+      "__tests__/preprocessor.js"
     ]
   },
   "repository": {
@@ -37,8 +38,7 @@
     "bower": "^1.3.12",
     "browserify": "^8.1.1",
     "cordova": "^4.2.0",
-    "jest-cli": "^0.2.1",
-    "sinon": "^1.12.2"
+    "jest-cli": "^0.2.1"
   },
   "dependencies": {
     "lodash": "^2.4.1",
