--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "test": "jest"
   },
   "jest": {
-    "scriptPreprocessor": "./__tests__/preprocessor.js",
+    "scriptPreprocessor": "./preprocessor.js",
     "unmockedModulePathPatterns": [
       "node_modules/react",
       "node_modules/react/addons"
     ],
     "testPathIgnorePatterns": [
-      "/node_modules/",
-      "__tests__/preprocessor.js"
+      "/node_modules/"
     ]
   },
   "repository": {
