--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest-cli": "^0.2.1"
   },
   "dependencies": {
+    "jQuery": "^1.7.4",
     "lodash": "^2.4.1",
     "ratchet": "git://github.com/twbs/ratchet",
     "react": "^0.12.2",
