--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bower": "^1.3.12",
     "browserify": "^8.1.1",
     "cordova": "^4.2.0",
+    "eslint": "^0.13.0",
     "jest-cli": "^0.2.1"
   },
   "dependencies": {
